# RAG

./: .gitignore  README.md  app.py  experiment.ipynb  pyproject.toml  requirements.txt
