[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-google-genai>=4.1.2",
    "langchain-text-splitters>=1.1.0",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "streamlit>=1.52.2",
]
